--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>syuのホームページ - Top</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1><a href="index.html"><img src="images/HP_logo_mono_s.png" width="684" height="120"></a></h1>
+    <h1><a href="index.html"><img src="HP_logo_mono_s.png" width="684" height="120"></a></h1>
     <nav>
       <ul>
         <li><a href="index.html">Top</a></li>
